--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+URL: https://coeneisma.github.io/kvkapiR/
