--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -20,6 +20,7 @@ jobs:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      KVK_API_KEY: ${{ secrets.KVK_API_KEY }}  # API-key toegevoegd als environment variabele
     permissions:
       contents: write
     steps:
@@ -35,6 +36,9 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+
+      - name: Set API key in environment
+        run: echo "KVK_API_KEY=${{ secrets.KVK_API_KEY }}" >> $GITHUB_ENV
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
