--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://coeneisma.github.io/kvkapiR/
+Imports: 
+    dplyr,
+    httr2,
+    tidyr
