--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,6 +40,9 @@ jobs:
       - name: Set API key in environment
         run: echo "KVK_API_KEY=${{ secrets.KVK_API_KEY }}" >> $GITHUB_ENV
 
+      - name: Check if KVK_API_KEY is set
+        run: echo "KVK_API_KEY is set to $KVK_API_KEY"
+
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
