--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,10 @@ Description: Provides a convenient interface to the Dutch Chamber of Commerce (K
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 URL: https://coeneisma.github.io/kvkapiR/
 Imports: 
     dplyr,
     httr2,
+    jsonlite,
     tidyr
