--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://coeneisma.github.io/kvkapiR/
+URL: https://coeneisma.github.io/kvkapiR/, https://github.com/coeneisma/kvkapiR/
 Imports: 
     dplyr,
     httr2,
