--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -21,7 +21,7 @@ jobs:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      KVK_API_KEY: ${{ secrets.KVK_API_KEY }}
+      KVK_SEARCH_API_KEY: ${{ secrets.KVK_SEARCH_API_KEY }}
     permissions:
       contents: write
     steps:
