feat: add comprehensive test suite
- Add testthat infrastructure with proper setup/teardown
- Add tests for API key management functions
- Add tests for search functionality including edge cases
- Add tests for all retrieve functions (basisprofiel, vestiging, naamgeving)
- Add tests for list_to_tibble helper function
- Test coverage includes error handling, NULL values, and test environment
- Support GitHub Actions secret KVK_SEARCH_API_KEY
- Test >1000 results warning using Rotterdam search
- Suppress expected 404 messages for cleaner test output

All tests pass successfully (59 passing, 0 skipped)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,4 +24,8 @@ Imports:
     purrr,
     tibble,
     tidyr
+Suggests: 
+    testthat (>= 3.0.0),
+    withr
+Config/testthat/edition: 3
 Config/Needs/website: rmarkdown
