--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(kvk_get_vestigingsprofiel)
 export(kvk_search)
 export(kvk_set_api_key)
 export(kvk_store_api_key)
+export(kvk_usage_report)
 importFrom(lifecycle,deprecated)
