--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,6 +22,13 @@ reference:
   - kvk_get_vestigingsprofiel
   - kvk_get_naamgeving
 
+- title: Usage tracking and cost monitoring
+  contents:
+  - kvk_usage_report
+  - kvk_usage_alert
+  - kvk_export_usage
+  - kvk_reset_usage
+
 - title: internal
   contents:
   - list_to_tibble
