--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: kvkapiR
 Title: An R Wrapper for the Dutch Chamber of Commerce API  
-Version: 0.0.0.9005
+Version: 0.1.0
 Authors@R: 
     person("Coen", "Eisma", , "coeneisma@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0007-9001-2572"))
@@ -15,6 +15,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://coeneisma.github.io/kvkapiR/, https://github.com/coeneisma/kvkapiR/
+BugReports: https://github.com/coeneisma/kvkapiR/issues
 Imports: 
     cli,
     dplyr,
