--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,26 +1,25 @@
 Package: kvkapiR
-Title: An R Wrapper for the Dutch Chamber of Commerce API  
+Title: Interface to the Dutch Chamber of Commerce (KvK) API
 Version: 0.1.0
 Authors@R: 
-    person("Coen", "Eisma", , "coeneisma@gmail.com", role = c("aut", "cre"),
+    person("Coen", "Eisma", , "coeneisma@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0009-0007-9001-2572"))
-Description: Provides a convenient interface to the Dutch Chamber of Commerce (KvK) API.  
-    This package is built using the `httr2` package and follows best practices  
-    for wrapping APIs in R, as outlined in the httr2 documentation  
-    (https://httr2.r-lib.org/articles/wrapping-apis.html). It simplifies  
-    authentication, request handling, and response parsing when interacting  
-    with the KvK API.
+Description: Access business registration data from the Dutch Chamber of 
+    Commerce (Kamer van Koophandel, KvK) through their official API. Search 
+    for companies by name, location, or registration number. Retrieve detailed 
+    business profiles, establishment information, and company name histories. 
+    Built on 'httr2' for robust API interaction with automatic pagination, 
+    error handling, and usage tracking.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://coeneisma.github.io/kvkapiR/, https://github.com/coeneisma/kvkapiR/, https://github.com/coeneisma/kvkapiR
+URL: https://coeneisma.github.io/kvkapiR/, https://github.com/coeneisma/kvkapiR/
 BugReports: https://github.com/coeneisma/kvkapiR/issues
 Imports: 
     cli,
     dplyr,
     httr2,
-    knitr,
     lifecycle,
     purrr,
     tibble,
