--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,7 +7,7 @@ template:
     primary: "#d87a47"
 
 reference:
-- title: API keys
+- title: KvK API keys
   contents:
   - kvk_set_api_key
   - kvk_store_api_key
