--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,14 @@ Version: 0.1.2
 Authors@R: 
     person("Coen", "Eisma", , "coeneisma@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0009-0007-9001-2572"))
+Author: Coen Eisma <coeneisma@gmail.com>
+Maintainer: Coen Eisma <coeneisma@gmail.com>
 Description: Access business registration data from the Dutch Chamber of 
-    Commerce (Kamer van Koophandel, KvK) through their official API. Search 
-    for companies by name, location, or registration number. Retrieve detailed 
-    business profiles, establishment information, and company name histories. 
-    Built on 'httr2' for robust API interaction with automatic pagination, 
-    error handling, and usage tracking.
+    Commerce (Kamer van Koophandel, KvK) through their official API 
+    <https://developers.kvk.nl/>. Search for companies by name, location, 
+    or registration number. Retrieve detailed business profiles, establishment 
+    information, and company name histories. Built on 'httr2' for robust API 
+    interaction with automatic pagination, error handling, and usage tracking.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
