--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,8 @@ export(kvk_get_vestigingsprofiel)
 export(kvk_reset_usage)
 export(kvk_search)
 export(kvk_set_api_key)
-export(kvk_store_api_key)
 export(kvk_usage_alert)
 export(kvk_usage_report)
 importFrom(lifecycle,deprecated)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
