--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,19 +4,16 @@ Version: 0.1.2
 Authors@R: 
     person("Coen", "Eisma", , "coeneisma@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0009-0007-9001-2572"))
-Author: Coen Eisma <coeneisma@gmail.com>
-Maintainer: Coen Eisma <coeneisma@gmail.com>
-Description: Access business registration data from the Dutch Chamber of 
-    Commerce (Kamer van Koophandel, KvK) through their official API 
-    <https://developers.kvk.nl/>. Search for companies by name, location, 
-    or registration number. Retrieve detailed business profiles, establishment 
-    information, and company name histories. Built on 'httr2' for robust API 
-    interaction with automatic pagination, error handling, and usage tracking.
+Description: Access business registration data from the Dutch Chamber of
+    Commerce (Kamer van Koophandel, KvK) through their official API
+    <https://developers.kvk.nl/>. Search for companies by name, location,
+    or registration number. Retrieve detailed business profiles,
+    establishment information, and company name histories. Built on
+    'httr2' for robust API interaction with automatic pagination, error
+    handling, and usage tracking.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
-URL: https://coeneisma.github.io/kvkapiR/, https://github.com/coeneisma/kvkapiR/
+URL: https://coeneisma.github.io/kvkapiR/,
+    https://github.com/coeneisma/kvkapiR/
 BugReports: https://github.com/coeneisma/kvkapiR/issues
 Imports: 
     cli,
@@ -25,9 +22,15 @@ Imports:
     lifecycle,
     purrr,
     tibble,
-    tidyr
+    tidyr,
+    utils
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0),
     withr
-Config/testthat/edition: 3
 Config/Needs/website: rmarkdown
+Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
